--- a/samples/legacy/index.html
+++ b/samples/legacy/index.html
@@ -4,7 +4,7 @@
     <title>Legacy Sample</title>
 
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../metro.bootstrap.min.css" />
 
     <script src="../../lib/angular/impl/angular.js"></script>
     <script src="../../lib/angular/impl/angular-bootstrap.js"></script>
