--- a/samples/legacy/index.html
+++ b/samples/legacy/index.html
@@ -14,15 +14,15 @@
     <script src="../../build/angular-routing.legacy.js"></script>
     <script src="script/application.js"></script>
 </head>
-<body>
+<body ng-controller="PageController">
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand" href="#/">ngStates</a>
+                <a class="brand" href="../index.html">Angular Routing Samples</a>
                 <ul class="nav">
-                    <li><a href="#/one">One</a></li>
-                    <li><a href="#/two">Two</a></li>
-                    <li><a href="#/three">Tree</a></li>
+                    <li ng-class="page == 'home' && 'active' || ''"><a href="#/">Home</a></li>
+                    <li ng-class="page == 'code' && 'active' || ''"><a href="#/code">Code</a></li>
+                    <li ng-class="page == 'about' && 'active' || ''"><a href="#/about">About</a></li>
                 </ul>
             </div>
         </div>
@@ -33,8 +33,7 @@
     <hr>
 
     <pre>
-        $state = 
-        $stateParams = 
+
     </pre>
 
 </body>
