Some reorganizing of projects so samples only exist in one.

--- a/samples/index.html
+++ b/samples/index.html
@@ -16,6 +16,11 @@
                     <h2 class="tile-text">Simple</h2>
                 </a>
             </li>
+            <li class="span3 tile tile-double tile-blue">
+                <a href="/samples/substates/index.html" >
+                    <h2 class="tile-text">Sub States</h2>
+                </a>
+            </li>
         </ul>
         
         <h1>Legacy Samples</h1>
