--- a/samples/index.html
+++ b/samples/index.html
@@ -12,12 +12,12 @@
         <hr/>
         <ul class="thumbnails">
             <li class="span3 tile tile-double tile-blue">
-                <a href="simple/index.html" >
+                <a href="simple/" >
                     <h2 class="tile-text">Simple</h2>
                 </a>
             </li>
             <li class="span3 tile tile-double tile-blue">
-                <a href="substates/index.html" >
+                <a href="substates/" >
                     <h2 class="tile-text">Sub States</h2>
                 </a>
             </li>
@@ -27,7 +27,7 @@
         <hr/>
         <ul class="thumbnails">
             <li class="span3 tile tile-double tile-blue">
-                <a href="legacy/index.html" >
+                <a href="legacy/" >
                     <h2 class="tile-text">Simple</h2>
                 </a>
             </li>
