--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html><body>dotJEM Angular Routing</body></html>
+<!DOCTYPE html>
+<html ng-app>
+<head>
+    <title>Sample Browser</title>
+
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="samples/metro.bootstrap.min.css" />
+
+</head>
+    <body>
+        <h1>Angular Routing</h1>
+    </body>
+</html>
