--- a/samples/substates/tpl/blog.post.html
+++ b/samples/substates/tpl/blog.post.html
@@ -1,10 +1,6 @@
-<<<<<<< HEAD
 ﻿<a href="#/blog/post/{{post.title}}">        
     <h3>{{post.title}}</h3>
 </a>
-=======
-﻿<a href="#/blog/post/{{post.title}}">        
-    <h3>{{post.title}}</h3>
-</a>
->>>>>>> Added samples to github pages
+{{post.views}}
+<br/>
 {{post.content}}
