directive for content

--- a/samples/substates/index.html
+++ b/samples/substates/index.html
@@ -11,6 +11,8 @@
     <script src="../../build/angular-routing.js"></script>
     <script src="script/data.js"></script>
     <script src="script/application.js"></script>
+    <script src="script/blogService.js"></script>
+    <script src="script/contentDirective.js"></script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
