trying to get YUIDOC to work

--- a/samples/legacy/index.html
+++ b/samples/legacy/index.html
@@ -1,40 +1,4 @@
-﻿<!DOCTYPE html>
-<html ng-app="sample">
-<head>
-    <title>Legacy Sample</title>
-
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../metro.bootstrap.min.css" />
-
-    <script src="../../lib/angular/impl/angular.js"></script>
-    <script src="../../lib/angular/impl/angular-bootstrap.js"></script>
-    <script src="../../lib/angular/impl/angular-bootstrap-prettify.js"></script>
-
-    <script src="../../build/angular-routing.js"></script>
-    <script src="../../build/angular-routing.legacy.js"></script>
-    <script src="script/application.js"></script>
-</head>
-<body ng-controller="PageController">
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="brand" href="../index.html">Angular Routing Samples</a>
-                <ul class="nav">
-                    <li ng-class="page == 'home' && 'active' || ''"><a href="#/">Home</a></li>
-                    <li ng-class="page == 'code' && 'active' || ''"><a href="#/code">Code</a></li>
-                    <li ng-class="page == 'about' && 'active' || ''"><a href="#/about">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    
-    <div class="container" style="margin-top: 60px" ng-view></div>
-    
-    <hr>
-
-    <pre>
-
-    </pre>
-
-</body>
-</html>
+﻿<!DOCTYPE html><html ng-app="sample"><head>    <title>Legacy Sample</title>
+    <meta charset="utf-8">    <link rel="stylesheet" type="text/css" href="../metro.bootstrap.min.css" />
+    <script src="../../lib/angular/impl/angular.js"></script>    <script src="../../lib/angular/impl/angular-bootstrap.js"></script>    <script src="../../lib/angular/impl/angular-bootstrap-prettify.js"></script>
+    <script src="../../build/angular-routing.js"></script>    <script src="../../build/angular-routing.legacy.js"></script>    <script src="script/application.js"></script></head><body ng-controller="PageController">    <div class="navbar navbar-fixed-top">        <div class="navbar-inner">            <div class="container">                <a class="brand" href="../index.html">Angular Routing Samples</a>                <ul class="nav">                    <li ng-class="page == 'home' && 'active' || ''"><a href="#/">Home</a></li>                    <li ng-class="page == 'code' && 'active' || ''"><a href="#/code">Code</a></li>                    <li ng-class="page == 'about' && 'active' || ''"><a href="#/about">About</a></li>                </ul>            </div>        </div>    </div>        <div class="container" style="margin-top: 60px" ng-view></div>        <hr>    <pre>    </pre></body></html>
