--- a/samples/substates/index.html
+++ b/samples/substates/index.html
@@ -4,6 +4,10 @@
     <title>Sub States Sample</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../metro.bootstrap.min.css" />
+    
+    <script src="../../lib/jquery/impl/jquery-1.9.1.min.js"></script>
+
+
     <script src="../../lib/angular/impl/angular.js"></script>
     <script src="../../lib/angular/impl/angular-bootstrap.js"></script>
     <script src="../../lib/angular/impl/angular-bootstrap-prettify.js"></script>
