Looking at incorporating ng-animate.

--- a/samples/substates/tpl/blog.html
+++ b/samples/substates/tpl/blog.html
@@ -15,5 +15,7 @@
             </ul>
         </div>
     </div>
-    <div class="span9" ui-view="content"></div>
+    <div class="span9 stage">
+        <div class="span9" ui-view="content" ng-animate="'wave'"></div>
+    </div>
 </div>
