--- a/samples/substates/tpl/blog.list.html
+++ b/samples/substates/tpl/blog.list.html
@@ -1,4 +1,5 @@
-﻿<h2>{{title}}</h2>
+﻿<div>
+<h2>{{title}}</h2>
 <ul style="list-style: none">
     <li ng-repeat="post in posts" class="thumbnail" style="padding: 0 12px; margin: 12px 0">
         <a href="#/blog/post/{{post.title}}">        
@@ -7,3 +8,4 @@
         {{post.content}}
     </li>
 </ul>
+</div>
