--- a/samples/substates/tpl/blog.post.html
+++ b/samples/substates/tpl/blog.post.html
@@ -1,4 +1,5 @@
-﻿<a href="#/blog/post/{{post.title}}">        
+﻿<div>
+<a href="#/blog/post/{{post.title}}">        
     <h3>{{post.title}}</h3>
 </a>
 {{post.views}}
@@ -15,3 +16,4 @@
         {{comment.content}}
     </li>
 </ul>
+</div>
