--- a/samples/substates/tpl/home.html
+++ b/samples/substates/tpl/home.html
@@ -1,4 +1,5 @@
-﻿<h2>Welcome to the Angular Routing simple sample</h2>
+﻿<div>
+<h2>Welcome to the Angular Routing simple sample</h2>
 <p>
     This sample that align to the same behavior as the legacy sample, to demonstrate the use compared to the legacy sample.
 </p>
@@ -9,3 +10,4 @@
     <br />
     Where we are currently at is configured as a secondary <code>ui-view</code> called hint.
 </p>
+</div>
