--- a/samples/substates/tpl/blog.html
+++ b/samples/substates/tpl/blog.html
@@ -15,7 +15,8 @@
             </ul>
         </div>
     </div>
-    <div class="span9 stage">
-        <div class="span9" ui-view="content" ng-animate="'wave'"></div>
+    <div class="span9">
+        <!--<div ui-view="content" ng-animate="'wave'" style="height: 600px;"></div>-->
+        <div ui-view="content" ng-animate="{enter: 'wave-enter', leave: 'wave-leave'}"></div>
     </div>
 </div>
