Fixed an issue with resolve

--- a/samples/substates/tpl/blog.list.html
+++ b/samples/substates/tpl/blog.list.html
@@ -1,5 +1,6 @@
 ﻿<div>
-<h2>{{title}}</h2>
+    <h2>{{title}}</h2>
+    {{resolved}}
 <ul style="list-style: none">
     <li ng-repeat="post in posts" class="thumbnail" style="padding: 0 12px; margin: 12px 0">
         <a href="#/blog/post/{{post.title}}">        
