--- a/samples/substates/tpl/blog.post.html
+++ b/samples/substates/tpl/blog.post.html
@@ -8,7 +8,7 @@
 <br/>
 <br/>
 
-<ul>
+<ul id="comments">
     <li ng-repeat="comment in post.comments" class="thumbnail" style="padding: 0 12px; margin: 12px 0">
         <a href="#/blog/post/{{post.title}}/comments">        
             <h3>{{comment.title}}</h3>
