--- a/samples/substates/tpl/blog.html
+++ b/samples/substates/tpl/blog.html
@@ -17,6 +17,6 @@
     </div>
     <div class="span9">
         <!--<div ui-view="content" ng-animate="'wave'" style="height: 600px;"></div>-->
-        <div ui-view="content" ng-animate="{enter: 'wave-enter', leave: 'wave-leave'}"></div>
+        <div jem-view="content" ng-animate="{enter: 'wave-enter', leave: 'wave-leave'}"></div>
     </div>
 </div>
