$transition and $transitionProvider documentation closes #31, closes #32

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 ﻿<!DOCTYPE html><html ng-app><head>    <title>Sample Browser</title>
     <meta charset="utf-8">    <link rel="stylesheet" type="text/css" href="samples/metro.bootstrap.min.css" />
-</head>    <body>        <h1>Angular Routing</h1>        <a href="samples/">Samples</a>        <a href="docs/">NGDocs</a>    </body></html>
+</head>    <body>        <h1>Angular Routing</h1>        <ul>
+            <li><a href="samples/">Samples</a></li>
+            <li><a href="doc/">NGDocs</a></li>
+        </ul>    </body></html>
