added basepath to url and format when html5Mode is active. Major view service refactoring.

--- a/samples/plunker1/home.html
+++ b/samples/plunker1/home.html
@@ -9,3 +9,6 @@
        <li><a href="#{{ fn.url('about.one') }}">42 Devide by 2</a></li>
        <li><a href="#{{ fn.url('about.two') }}">42 Times 100</a></li>
      </ul>
+
+
+{{host}}
