--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
+      <base href="http://localhost:52008/samples/plunker1/"/>
   </head>
 
   <body ng-controller="siteController">
