simple implementation of the ability to display a loader, closes #63

--- a/samples/plunker1/about.html
+++ b/samples/plunker1/about.html
@@ -5,5 +5,5 @@
        <li><a href="#{{ fn.url('about.two') }}">Times 100</a></li>
        <li><a href="#{{ fn.url('about.three') }}">Exponent</a></li>
      </ul>
-     <div jem-view="about"></div>
+     <div jem-view="about" loader="progress.html"></div>
 </div>
