--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="container" jem-view="main"></div>
+    <div class="container" jem-view="main" loader="progress.html" ></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
