Rebase from Master
Merge remote-tracking branch 'origin/master' into Angular-1.2.0-rc.2

Conflicts:
build/angular-routing.js
build/angular-routing.legacy.min.js
build/angular-routing.min.js
build/src/directives/jemView.js
build/src/route.js
build/src/state.js
build/src/state/stateBrowser.js
build/src/view.js
build/test/state/stateBrowser.js
build/test/stateSpec.js
gruntfile.js
samples/plunker1/about.html
samples/plunker1/about.module.js
samples/plunker1/demo.js
samples/plunker1/index.html
src/common.ts
src/directives/jemView.ts
src/route.ts
src/state.ts
src/state/refs.d.ts
src/state/stateBrowser.ts
src/view.ts
test-dev-jqlite-config.js
test-dev-jquery-config.js
test/stateSpec.ts

--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -4,7 +4,6 @@
   <head>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
-      <base href="http://localhost:52008/samples/plunker1/"/>
   </head>
 
   <body ng-controller="siteController">
@@ -33,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="container" jem-view="main"></div>
+    <div class="container" jem-view="main" loader="progress.html" ></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
