--- a/samples/plunker1/about.html
+++ b/samples/plunker1/about.html
@@ -1,9 +1,9 @@
 <div class="starter-template">
      <h1>About {{ model.av }}</h1>
      <ul class="nav nav-pills">
-       <li><a href="#{{ fn.url('about.one') }}">Devide by 2</a></li>
-       <li><a href="#{{ fn.url('about.two') }}">Times 100</a></li>
-       <li><a href="#{{ fn.url('about.three') }}">Exponent</a></li>
+       <li><a sref="'about.one'" params="{ value: 10 }">Devide by 2</a></li>
+       <li><a sref="'about.two'" params="{ value: 10 }">Times 100</a></li>
+       <li><a sref="'about.three'" params="{ value: 10 }">Exponent</a></li>
      </ul>
      <div jem-view="about" loader="progress.html"></div>
 </div>
