--- a/samples/plunker1/about.html
+++ b/samples/plunker1/about.html
@@ -5,5 +5,5 @@
        <li><a sref="'about.two'" params="{ value: 10 }">Times 100</a></li>
        <li><a sref="'about.three'" params="{ value: 10 }">Exponent</a></li>
      </ul>
-     <div jem-view="about" loader="progress.html"></div>
+     <div jem-view="about" loader="'progress.html'"></div>
 </div>
