--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -20,24 +20,22 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li ng-class="{ active: fn.isActive('home') }">
-                        <a href="#{{ fn.url('home') }}">Home</a>
+                        <a sref="'home'">Home</a>
                     </li>
                     <li ng-class="{ active: fn.isActive('about') }">
-                        <a href="#{{ fn.url('about') }}">About</a>
+                        <a sref="'about'">About</a>
                     </li>
                     <li ng-class="{ active: fn.isActive('contact') }">
-                        <a href="#{{ fn.url('contact') }}">Contact</a>
+                        <a sref="'contact'">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container" jem-view="main" loader="progress.html"></div>
+    <div class="container" jem-view="main" loader="'progress.html'"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
-    <a sref="'home'">Home</a>
 
     <script src="../../build/angular-routing.js"></script>
     <script src="home.module.js"></script>
