Added form to jemLink...
Not sure this is the correct way, so will have to test, but since I
can't really fanthom form action in an angular world I am at a loss atm.

--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -33,6 +33,10 @@
         </div>
     </div>
     <div class="container" jem-view="main" loader="'progress.html'"></div>
+    
+    <a sref="'home'">GENERATED HOME LINK</a>
+    <a sref="'about.one'" params="{ value: 55 }">GENERATED ABOUT LINK</a>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
