added base path option to $state.url

--- a/samples/plunker1/home.html
+++ b/samples/plunker1/home.html
@@ -1,15 +1,8 @@
 <div class="starter-template">
-     <h1>Bootstrap starter template</h1>
+    <h1>Bootstrap starter template</h1>
 
     <p class="lead">Use this document as a way to quickly start any new project.
         <br/>All you get is this text and a mostly barebones HTML document.</p>
 </div>
 
-     <ul class="nav nav-pills">
-       <li><a href="#{{ fn.url('about.one') }}">42 Devide by 2</a></li>
-       <li><a href="#{{ fn.url('about.two') }}">42 Times 100</a></li>
-     </ul>
-
-
-{{host}}
-
+<div ng-click="fn.goto('about');">GOTO ABOUT</div>
