--- a/samples/plunker1/about.html
+++ b/samples/plunker1/about.html
@@ -1,9 +1,3 @@
 <div class="starter-template">
-     <h1>About {{ model.av }}</h1>
-     <ul class="nav nav-pills">
-       <li><a sref="'about.one'" params="{ value: 10 }">Devide by 2</a></li>
-       <li><a sref="'about.two'" params="{ value: 10 }">Times 100</a></li>
-       <li><a sref="'about.three'" params="{ value: 10 }">Exponent</a></li>
-     </ul>
-     <div jem-view="about" loader="'progress.html'"></div>
+     <h1>About</h1>
 </div>
