--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html ng-app="demo">
 
-<head>
+  <head>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
-</head>
+      <link rel="stylesheet" href="style.css" />
+      
+      <base href="http://localhost:52008/samples/plunker1/"/>
+  </head>
 
-<body ng-controller="siteController">
+  <body ng-controller="siteController">
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#/">Project name</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li ng-class="{ active: fn.isActive('home') }">
-                        <a sref="'home'">Home</a>
-                    </li>
-                    <li ng-class="{ active: fn.isActive('about') }">
-                        <a sref="'about'">About</a>
-                    </li>
-                    <li ng-class="{ active: fn.isActive('contact') }">
-                        <a sref="'contact'">Contact</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#/">Project name</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li ng-class="{ active: fn.isActive('home') }">
+              <a sref="'home'">Home</a>
+            </li>
+            <li ng-class="{ active: fn.isActive('about') }">
+              <a sref="'about'">About</a>
+            </li>
+            <li ng-class="{ active: fn.isActive('contact') }">
+              <a sref="'contact'">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="container" jem-view="main" loader="'progress.html'"></div>
-    
-    <a sref="'home'">GENERATED HOME LINK</a>
-    <a sref="'about.one'" params="{ value: 55 }">GENERATED ABOUT LINK</a>
-
+    <div class="container" jem-view="main"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
-    <script src="../../build/angular-routing.js"></script>
+    <script src="https://rawgithub.com/dotJEM/angular-routing/master/build/angular-routing.js"></script>
     <script src="home.module.js"></script>
     <script src="about.module.js"></script>
     <script src="contact.module.js"></script>
     <script src="demo.js"></script>
-</body>
+  </body>
 
 </html>
