--- a/samples/plunker1/index.html
+++ b/samples/plunker1/index.html
@@ -32,15 +32,10 @@
             </div>
         </div>
     </div>
-    <div class="container" jem-view="main" loader="'progress.html'"></div>
-    
-    <a sref="'home'">GENERATED HOME LINK</a>
-    <a sref="'about.one'" params="{ value: 55 }">GENERATED ABOUT LINK</a>
-
+    <div class="container" jem-view="main"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
     <script src="../../build/angular-routing.js"></script>
     <script src="home.module.js"></script>
     <script src="about.module.js"></script>
