--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="styles/dxsample.css" rel="stylesheet" type="text/css" />
     <link href="styles/dxdocs.css" rel="stylesheet" type="text/css" />
 
-    <base href="/" />
+    <base href="http://dotjem.github.io/angular-routing/" />
 </head>
 <body ng-controller="siteController">
 
