--- a/index.html
+++ b/index.html
@@ -89,30 +89,30 @@
     </div>
 
     <!-- TODO: These scripts should be referenced from CDN's -->
-    <script src="angular-routing/assets/scripts/jquery/impl/jquery-2.0.3.js" ></script>
-    <script src="angular-routing/assets/scripts/modenizr/impl/modernizr-2.6.2-respond-1.1.0.min.js" ></script>
-    <script src="angular-routing/assets/scripts/syntaxhighlight/impl/XRegExp.js"></script>
-    <script src="angular-routing/assets/scripts/syntaxhighlight/impl/shCore.full.js"></script>
+    <script src="assets/scripts/jquery/impl/jquery-2.0.3.js" ></script>
+    <script src="assets/scripts/modenizr/impl/modernizr-2.6.2-respond-1.1.0.min.js" ></script>
+    <script src="assets/scripts/syntaxhighlight/impl/XRegExp.js"></script>
+    <script src="assets/scripts/syntaxhighlight/impl/shCore.full.js"></script>
 
-    <script src="angular-routing/assets/scripts/angular/impl/angular.js" ></script>
-    <script src="angular-routing/assets/scripts/angular/impl/angular-animate.js" ></script>
-    <script src="angular-routing/assets/scripts/bootstrap/impl/bootstrap.js" ></script>
+    <script src="assets/scripts/angular/impl/angular.js" ></script>
+    <script src="assets/scripts/angular/impl/angular-animate.js" ></script>
+    <script src="assets/scripts/bootstrap/impl/bootstrap.js" ></script>
 
     <!-- TODO: Scripts should be compiled into single file -->
-    <script src="angular-routing/assets/scripts/angular-routing/impl/angular-routing.js" ></script>
+    <script src="assets/scripts/angular-routing/impl/angular-routing.js" ></script>
 
     <!-- TODO: Scripts should be compiled into a single files pr. module -->
-    <script src="angular-routing/docs/docs-setup.ts" ></script>
-    <script src="angular-routing/scripts/dotjem.js" ></script>
-    <script src="angular-routing/scripts/dotjem.docs.js" ></script>
+    <script src="docs/docs-setup.ts" ></script>
+    <script src="scripts/dotjem.js" ></script>
+    <script src="scripts/dotjem.docs.js" ></script>
 
-    <script src="angular-routing/scripts/common/enums.js" ></script>
+    <script src="scripts/common/enums.js" ></script>
 
-    <script src="angular-routing/scripts/directives/dxSyntax.js" ></script>
-    <script src="angular-routing/scripts/directives/dxSample.js" ></script>
+    <script src="scripts/directives/dxSyntax.js" ></script>
+    <script src="scripts/directives/dxSample.js" ></script>
 
-    <script src="angular-routing/scripts/services/plunkr.js" ></script>
-    <script src="angular-routing/scripts/services/scriptLoader.js" ></script>
-    <script src="angular-routing/scripts/services/syntax.js" ></script>
+    <script src="scripts/services/plunkr.js" ></script>
+    <script src="scripts/services/scriptLoader.js" ></script>
+    <script src="scripts/services/syntax.js" ></script>
 </body>
 </html>
