--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="assets/styles/normalize/normalize.css" rel="stylesheet" type="text/css" />
     <link href="assets/styles/bootstrap/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="assets/glyphs/icomoon/style.css" rel="stylesheet" type="text/css" />
-    <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="styles/main.css?v=2" rel="stylesheet" type="text/css" />
     <link href="styles/syntaxhighlighter.css" rel="stylesheet" type="text/css" />
     <link href="styles/dxsample.css" rel="stylesheet" type="text/css" />
     <link href="styles/dxdocs.css" rel="stylesheet" type="text/css" />
@@ -108,8 +108,8 @@
 
     <script src="scripts/common/enums.js" ></script>
 
-    <script src="scripts/directives/dxSyntax.js" ></script>
-    <script src="scripts/directives/dxSample.js" ></script>
+    <script src="scripts/directives/dxSyntax.js?v=2" ></script>
+    <script src="scripts/directives/dxSample.js?v=2" ></script>
 
     <script src="scripts/services/plunkr.js" ></script>
     <script src="scripts/services/scriptLoader.js" ></script>
