--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script src="scripts/common/enums.js" ></script>
 
     <script src="scripts/directives/dxSyntax.js" ></script>
-    <script src="scripts/directives/dxSample.js" ></script>
+    <script src="scripts/directives/dxSample.js?v3" ></script>
 
     <script src="scripts/services/plunkr.js" ></script>
     <script src="scripts/services/scriptLoader.js" ></script>
