--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -46,7 +46,7 @@
                             <li><a sref="'docs.concepts.views'">Views</a></li>
                             <li><a sref="'docs.concepts.routes'">Routes</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">FAQ</a></li>
+                            <li><a sref="'docs.faq'">FAQ</a></li>
                         </ul>
                     </li>
                     <li ng-class="{active: isActive('na')}" class="dropdown">
