--- a/samples/substates/tpl-about.html
+++ b/samples/substates/tpl-about.html
@@ -3,7 +3,7 @@
 </div>
 
 <ul class="nav nav-pills">
-  <li ng-class="{ active: ('about' | isCurrentState) }"><a sref="'about'">Back to About</a></li>
+  <li ng-class="{ active: ('about' | isCurrentState) }"><a sref="'about'">About</a></li>
   <li ng-class="{ active: ('about.page1' | isCurrentState) }"><a sref="'about.page1'">Page 1</a></li>
   <li ng-class="{ active: ('about.page2' | isCurrentState) }"><a sref="'about.page2'">Page 2</a></li>
   <li ng-class="{ active: ('about.page3' | isCurrentState) }"><a sref="'about.page3'">Page 2</a></li>
