--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script src="assets/scripts/angular-routing/impl/angular-routing.js" ></script>
 
     <!-- TODO: Scripts should be compiled into a single files pr. module -->
-    <script src="docs/docs-setup.ts" ></script>
+    <script src="docs/docs-setup.js" ></script>
     <script src="scripts/dotjem.js" ></script>
     <script src="scripts/dotjem.docs.js" ></script>
 
